src/test/ui/associated-types/hr-associated-type-bound-object.stderr
error[E0277]: the trait bound `for<'b> <T as X<'b>>::U: Clone` is not satisfied
  --> $DIR/hr-associated-type-bound-object.rs:7:13
   |
LL | trait X<'a>
   |       - required by a bound in this
LL | where
LL |     for<'b> <Self as X<'b>>::U: Clone,
   |                                 ----- required by this bound in `X`
...
LL | fn f<'a, T: X<'a> + ?Sized>(x: &<T as X<'a>>::U) {
   |             ^^^^^ the trait `for<'b> Clone` is not implemented for `<T as X<'b>>::U`
   |
   = help: the following implementations were found:
             <&T as Clone>

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
